k8s-wordpress/ingress/wordpress-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: wordpress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/client-max-body-size: "64m"
spec:
  ingressClassName: nginx
  rules:
  - host: mmt157.io.vn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
  # Uncomment for HTTPS
  tls:
  - hosts:
    - mmt157.io.vn
    secretName: wordpress-tls
